<resources>
    <string name="app_name">PopularMoviesApp</string>
    <string name="app_label">Popular Movies App</string>

    ------------------------------------------------
    <!--Strings for AllMoviesActivity-->
    ------------------------------------------------
    <string name="tv_error_loading_data">An error was encountered while trying to access the web,\n
        please try again
    </string>
    <string name="tv_no_network_connection">There is no network connectivity,\n
        please try again later
    </string>
    <string name="tv_no_search_results">No results were found</string>

    <!-- Activity Labels -->
    <string name="label_all_movies_activity_most_popular_movies">The Most Popular Movies</string>
    <string name="label_all_movies_activity_top_rated_movies">Top Rated Movies</string>

    ------------------------------------------------
    <!--Strings for MovieDetailsActivity-->
    ------------------------------------------------

    <!-- Note: opening bracket "<" is HTML-escaped, using the "&lt" -->
    <string name="movie_details_original_title">&lt;b>Original title:&lt;/b> %1$s</string>
    <string name="movie_plot">&lt;b>Plot:&lt;/b> %1$s</string>
    <string name="movie_details_rating">&lt;b>Rating:&lt;/b> %1$s</string>
    <string name="movie_details_vote_count">&lt;b>Votes:&lt;/b> %1$s</string>
    <string name="movie_details_release_date">&lt;b>Released:&lt;/b> %1$s</string>
    <string name="movie_genre">&lt;b>Genre:&lt;/b> %1$s</string>
    <string name="movie_cast">&lt;b>Main cast:&lt;/b> %1$s</string>
    <string name="movie_directors">&lt;b>Director:&lt;/b> %1$s</string>
    <string name="movie_empty_text">&lt;</string>
    <!-- Genres -->
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="genre_unknown">not defined</string>
    <string name="genre_any">All genres</string>

    ------------------------------------------------
    <!--Strings for NavigationDrawer of AllMoviesActivity-->
    ------------------------------------------------
    <!-- NavigationDrawer ListView Items names -->
    <string name="nav_dr_list_item_01_most_popular">Most popular</string>
    <string name="nav_dr__list_item_02_top_rated">Top rated</string>
    <string name="nav_dr__list_item_03_settings">Settings</string>
    <string name="nav_dr__list_item_04_about">About</string>

    <!-- NavigationDrawer resources to describe actions for accessibility -->
    <string name="nav_dr_accessibility_open_drawer">Opens navigation drawer of the application</string>
    <string name="nav_dr_accessibility_close_drawer">Closes navigation drawer of the application</string>

    <!--Todo(24) these to be changed / removed-->
    <string name="nav_dr_Activity_title">My activity</string>
    <string name="nav_dr_Drawer_title">My nav drawer</string>

    ------------------------------------------------
    <!--Strings for MovieSearchActivity & the related widgets-->
    ------------------------------------------------

    <string name="menu_labels_search">Search</string>
    <string name="search_hint_text_for_search_widget">search for movies...</string>

    ------------------------------------------------
    <!--Strings for AboutActivity-->
    ------------------------------------------------

    <string name="about_TMDb_API_disclaimer">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_release_date">Released 2017-Nov</string>

    ------------------------------------------------
    <!--Strings for Preferences-->
    ------------------------------------------------

    <!-- Label for the save on exit checkbox preference -->
    <string name="pref_save_on_exit_label">Save settings on exit</string>
    <!-- Key name for save on exit in SharedPreferences -->
    <string name="pref_save_on_exit_key" translatable="false">save_on_exit</string>
    <!-- Summary for Checkboxes -->
    <string name="pref_save_on_exit_true">Yes</string>
    <string name="pref_save_on_exit_false">No</string>


    <!-- Label for the genre preference -->
    <string name="pref_genre_label">Genre</string>
    <!-- Key name for genre preference in SharedPreferences -->
    <string name="pref_genre_key" translatable="false">genre</string>
    <!-- Values in SharedPreferences for different genres options -->
    <string name="pref_genre_action_value" translatable="false">action</string>
    <string name="pref_genre_adventure_value" translatable="false">adventure</string>
    <string name="pref_genre_animation_value" translatable="false">animation</string>
    <string name="pref_genre_comedy_value" translatable="false">comedy</string>
    <string name="pref_genre_crime_value" translatable="false">crime</string>
    <string name="pref_genre_documentary_value" translatable="false">documentary</string>
    <string name="pref_genre_drama_value" translatable="false">drama</string>
    <string name="pref_genre_family_value" translatable="false">family</string>
    <string name="pref_genre_fantasy_value" translatable="false">fantasy</string>
    <string name="pref_genre_history_value" translatable="false">history</string>
    <string name="pref_genre_horror_value" translatable="false">horror</string>
    <string name="pref_genre_music_value" translatable="false">music</string>
    <string name="pref_genre_mystery_value" translatable="false">mystery</string>
    <string name="pref_genre_romance_value" translatable="false">romance</string>
    <string name="pref_genre_science_fiction_value" translatable="false">science_fiction</string>
    <string name="pref_genre_tv_movie_value" translatable="false">tv_movie</string>
    <string name="pref_genre_thriller_value" translatable="false">thriller</string>
    <string name="pref_genre_war_value" translatable="false">war</string>
    <string name="pref_genre_western_value" translatable="false">western</string>
    <string name="pref_genre_any_value" translatable="false">any</string>


    <!-- Label for the earliest year preference -->
    <string name="pref_earliest_year_label">Released starting</string>
    <!-- Key name for earliest year in SharedPreferences -->
    <string name="pref_earliest_year_key" translatable="false">released starting</string>
    <!-- Default for earliest year preference -->
    <string name="pref_earliest_year_default" translatable="false">1800</string>
    <!-- Label for the latest year preference -->
    <string name="pref_latest_year_label">Released ending</string>
    <!-- Key name for latest year in SharedPreferences -->
    <string name="pref_latest_year_key" translatable="false">released ending</string>
    <!-- Default for latest year preference -->
    <string name="pref_latest_year_default" translatable="false">2100</string>
    <!-- Toast message to be shown if the selected year is invalid -->
    <string name="pref_year_check_toast">Please select a valid year.</string>

</resources>
