<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.kasparasza.popularmoviesapp.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/about_app_icon_size"
                android:layout_height="@dimen/about_app_icon_size"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:layout_gravity="center"
                android:text="@string/about_version"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_release_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:layout_gravity="center"
                android:text="@string/about_TMDb_API_disclaimer"/>

            <ImageView
                android:layout_width="@dimen/about_TMDb_icon_size"
                android:layout_height="@dimen/about_TMDb_icon_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:src="@drawable/tmdb_logo_blue"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="1dp"/>

    </LinearLayout>

</ScrollView>
